🐛 fix(parameterComponent): use strict equality operator (===) instead of loose equality operator (==) for item.type comparison to improve code quality and avoid potential bugs 🐛 fix(parameterComponent): update style prop value in ShadTooltip component to use class names 'tooltip-fixed-width' and 'custom-scroll' for consistent styling and better readability 🐛 fix(parameterComponent): update disabled prop value in TextAreaComponent to use the disabled variable passed as a prop for consistency and better code organization 🐛 fix(AccordionComponent): use strict equality operator (===) instead of loose equality operator (==) for open.length comparison to improve code quality and avoid potential bugs 🐛 fix(codeAreaComponent): remove unnecessary space in className prop value to improve code readability 🐛 fix(codeAreaComponent): remove unnecessary space in className prop value to improve code readability 🐛 fix(codeAreaComponent): remove unnecessary space in className prop value to improve code readability 🐛 fix(codeAreaComponent): remove unnecessary space in className prop value to improve code readability 🐛 fix(inputFileComponent): remove unnecessary space in className prop value to improve code readability 🐛 fix(inputFileComponent): remove unnecessary space in className prop value to improve code readability 🐛 fix(inputFileComponent): remove unnecessary space in className prop value to improve code readability 🐛 fix(inputFileComponent): remove unnecessary space in className prop value to improve code readability 🐛 fix(intComponent): remove unnecessary space in className prop value to improve code readability 🐛 fix(intComponent): remove unnecessary space in className prop value to improve code readability 🐛 fix(promptComponent): add missing dependencies to useEffect dependency array to avoid potential bugs and improve code quality 🐛 fix(promptComponent): remove unnecessary space in className prop value to improve code readability 🐛 fix(textAreaComponent): remove unnecessary

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -205,6 +205,7 @@ The cursor: default; property value restores the browser's default cursor style 
   .input-primary {
     @apply bg-background block border-ring form-input px-3 placeholder:text-muted-foreground rounded-md shadow-sm sm:text-sm truncate w-full;
   }
+
   .input-edit-node{
     @apply input-primary placeholder:text-center pt-0.5 pb-0.5 text-center
   }
@@ -212,7 +213,7 @@ The cursor: default; property value restores the browser's default cursor style 
     @apply input-primary pr-7 mx-2
   }
   .input-disable{
-    @apply bg-input
+    @apply bg-input text-muted-foreground
   }
   .input-dialog{
     @apply text-ring cursor-pointer bg-transparent
@@ -1049,5 +1050,8 @@ The cursor: default; property value restores the browser's default cursor style 
     @apply relative w-full rounded-md shadow-sm
   }
 
+  .tooltip-fixed-width{
+    @apply max-w-[30vw] max-h-[20vh] overflow-auto
+  }
 
 }
